--- a/Zabor/Zabor.csproj
+++ b/Zabor/Zabor.csproj
@@ -13,4 +13,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\fencePlates\" />
+    <Folder Include="wwwroot\images\fenceCovers\" />
+  </ItemGroup>
+
 </Project>
